Add WSL support, Gradle integration, and fix process deadlock
Features:
- WSL project support: Use basePath instead of guessProjectDir for reliable path detection
- Parent .envrc search: Find .envrc in parent directories (monorepo support)
- Global Gradle integration: Inject env vars into all Gradle operations via GradleExecutionHelperExtension
- Fix stdout deadlock: Read process output before waitFor() to prevent blocking
- Right-click menu: Show "Import Direnv" action anywhere in project (not just on .envrc)
- Process timeout: 30s timeout prevents hanging processes

Technical changes:
- Migrate to IntelliJ Platform Gradle Plugin 2.0
- Target IntelliJ 2025.2 (build 252+)
- Replace TaskManager/ProjectResolver extensions with single GradleExecutionHelperExtension
- Non-blocking notification actions
- Rename plugin to "Direnv Enhanced" v0.3.0

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,18 +3,18 @@
 exampleLibrary = "24.1.0"
 
 # plugins
-kotlin = "1.9.24"
-changelog = "2.2.0"
-gradleIntelliJPlugin = "1.17.4"
-qodana = "2024.1.5"
-kover = "0.8.1"
+kotlin = "2.2.0"
+changelog = "2.2.1"
+intellijPlatform = "2.10.5"
+qodana = "2024.2.3"
+kover = "0.8.3"
 
 [libraries]
 exampleLibrary = { group = "com.example", name = "exampleLibrary", version.ref = "exampleLibrary" }
 
 [plugins]
 changelog = { id = "org.jetbrains.changelog", version.ref = "changelog" }
-gradleIntelliJPlugin = { id = "org.jetbrains.intellij", version.ref = "gradleIntelliJPlugin" }
+intellijPlatform = { id = "org.jetbrains.intellij.platform", version.ref = "intellijPlatform" }
 kotlin = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 kover = { id = "org.jetbrains.kotlinx.kover", version.ref = "kover" }
 qodana = { id = "org.jetbrains.qodana", version.ref = "qodana" }
