--- a/gradle.properties
+++ b/gradle.properties
@@ -1,24 +1,25 @@
 # IntelliJ Platform Artifacts Repositories -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
-pluginGroup = systems.fehn.intellijdirenv
-pluginName = Direnv integration
-pluginRepositoryUrl = https://github.com/fehnomenal/intellij-direnv
+pluginGroup = systems.ludosch.direnvenhanced
+pluginName = Direnv Enhanced
+pluginRepositoryUrl = https://github.com/ludosch/direnvenhanced
 # SemVer format -> https://semver.org
-pluginVersion = 0.2.10
+pluginVersion = 0.3.0
 
 # Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
-pluginSinceBuild = 232
+pluginSinceBuild = 252
+pluginUntilBuild = 252.*
 
-# IntelliJ Platform Properties -> https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html#configuration-intellij-extension
+# IntelliJ Platform Properties -> https://plugins.jetbrains.com/docs/intellij/tools-intellij-platform-gradle-plugin.html
 platformType = IC
-platformVersion = 2023.2.7
+platformVersion = 2025.2
 
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
 # Example: platformPlugins = com.intellij.java, com.jetbrains.php:203.4449.22
-platformPlugins =
+platformPlugins = com.intellij.gradle
 
 # Gradle Releases -> https://github.com/gradle/gradle/releases
-gradleVersion = 8.9
+gradleVersion = 8.14.1
 
 # Opt-out flag for bundling Kotlin standard library -> https://plugins.jetbrains.com/docs/intellij/kotlin.html#kotlin-standard-library
 kotlin.stdlib.default.dependency = false
