--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,10 +1,11 @@
 <!-- Plugin Configuration File. Read more: https://plugins.jetbrains.com/docs/intellij/plugin-configuration-file.html -->
-<idea-plugin url="https://github.com/fehnomenal/intellij-direnv">
-  <id>systems.fehn.intellijdirenv</id>
-  <name>Direnv Integration</name>
-  <vendor>fehnomenal</vendor>
+<idea-plugin url="https://github.com/ludosch/direnvenhanced">
+  <id>systems.ludosch.direnvenhanced</id>
+  <name>Direnv Enhanced</name>
+  <vendor>ludosch</vendor>
 
   <depends>com.intellij.modules.platform</depends>
+  <depends optional="true" config-file="direnv-gradle.xml">com.intellij.gradle</depends>
 
   <resource-bundle>messages.MyBundle</resource-bundle>
 
