Fix IntelliJ plugin compliance issues
- Migrate from deprecated StartupActivity to ProjectActivity
- Wrap FileEditorManager.openFile in invokeLater for EDT safety
- Expand compatibility from IntelliJ 2024.2 to 2025.2 (builds 242-252)

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -15,7 +15,7 @@
                              displayName="Direnv Settings" />
     <applicationService serviceImplementation="systems.fehn.intellijdirenv.settings.DirenvSettingsState" />
     <notificationGroup id="Direnv" displayType="BALLOON" />
-    <postStartupActivity implementation="systems.fehn.intellijdirenv.MyStartupActivity" />
+    <projectActivity implementation="systems.fehn.intellijdirenv.MyStartupActivity" />
   </extensions>
 
   <actions>
