--- a/src/main/resources/messages/MyBundle.properties
+++ b/src/main/resources/messages/MyBundle.properties
@@ -1,5 +1,5 @@
-importDirenvAction=Import Direnv
-importDirenvStartupMessage=Import direnv
+importDirenvAction=Reload with direnv
+importDirenvStartupMessage=Reload with direnv
 envrcNotYetAllowed=The .envrc file for this project is not yet allowed.
 allow=Allow now
 errorDuringDirenv=Error during direnv execution.
