--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -19,11 +19,13 @@
   </extensions>
 
   <actions>
-    <action id="Direnv.import.ToolBar"
+    <action id="Direnv.Import"
             class="systems.fehn.intellijdirenv.DirenvImportAction"
-            text="Reload with direnv"
+            text="Reload with Direnv"
             description="Reload environment variables using direnv"
             icon="/META-INF/actionIcon.png">
+      <keyboard-shortcut keymap="$default" first-keystroke="ctrl alt D"/>
+      <add-to-group group-id="ToolsMenu" anchor="last"/>
       <add-to-group group-id="MainToolBar"
                     anchor="after"
                     relative-to-action="Synchronize" />
